feature:button for generate array and binary sort

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div class="header">
+    <img class="mario"src="https://media.giphy.com/media/Jb0JNMsofDpAI/giphy.gif" alt="mario-img">
     <h1 class="">Bubble Sort</h1>
   </div>
 
@@ -17,7 +18,15 @@
   <div id="array">
 
   </div>
-  
+    <div class="button-row">
+      <button class="generate-array-btn button" type="button" name="button">Generate Array</button>
+
+      <button class="bubble-sort-btn button" type="button" name="button">Bubble Sort</button>
+
+    </div>
+
+
+
 
   <script src="index.js" charset="utf-8"></script>
 </body>
