feature:sorting complete

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div class="header">
-    <img class="mario"src="https://media.giphy.com/media/Jb0JNMsofDpAI/giphy.gif" alt="mario-img">
-    <h1 class="">Bubble Sort</h1>
+    
+    <h1 class="">Algo - Game</h1>
   </div>
 
 
@@ -22,6 +22,10 @@
       <button class="generate-array-btn button" type="button" name="button">Generate Array</button>
 
       <button class="bubble-sort-btn button" type="button" name="button">Bubble Sort</button>
+
+      <button class="selection-sort-btn button" type="button" name="button">Selection Sort</button>
+
+      <button class="insertion-sort-btn button" type="button" name="button">Insertion Sort</button>
 
     </div>
 
