--- a/sort.html
+++ b/sort.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="header">
-    
+
     <h1 class="">Algo - Game</h1>
   </div>
 
@@ -32,7 +32,7 @@
 
 
 
-  <script src="index.js" charset="utf-8"></script>
+  <script  src="sort.js" charset="utf-8"></script>
 </body>
 
 </html>
