--- a/search.html
+++ b/search.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header">
 
-      <h1 class="">Algo - Game</h1>
+      <h1 class="">Search</h1>
     </div>
     <div id="array">
 
