--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav ms-auto">
             <li class="nav item">
-                <a class="nav-link" href="">
+                <a class="nav-link" href="https://docs.google.com/presentation/d/1raZewf2W0wm8rTSwwpbG6abSTecbkcyG1H6FkcLd6jw/edit?ts=607af4c3#slide=id.p1">
                     Let's Explore
                 </a>
             </li>
             <li class="nav item">
-                <a class="nav-link" href="">Quiz</a>
+                <a class="nav-link" href="quiz_app/home.html">Quiz</a>
             </li>
             <li class="nav item">
               <div class="dropdown">
@@ -55,7 +55,8 @@
          <p>Coding examples</p>
          <p>Reliable Resources</p>
 
-         <button type="button" class="btn btn-lg btn-outline-dark w-100">Sign Up</button>
+         <a href="https://docs.google.com/presentation/d/1raZewf2W0wm8rTSwwpbG6abSTecbkcyG1H6FkcLd6jw/edit?ts=607af4c3#slide=id.p1"><button type="button" class="btn btn-lg btn-outline-dark w-100">Explore more!!!</button></a>
+
 
        </div>
 
@@ -74,7 +75,7 @@
          <p>Cognitive learning based</p>
          <p>Positive outlook</p>
 
-        <a href="sort.html"><button type="button" class="btn btn-lg btn-dark w-100">Quiz</button></a>
+        <a href="quiz_app/home.html"><button type="button" class="btn btn-lg btn-dark w-100">Quiz</button></a>
        </div>
 
      </div>
@@ -92,7 +93,7 @@
          <p>Sorting techniques</p>
          <p>Searching techniques</p>
 
-        <a href="search.html"> <button type="button" class="btn btn-lg btn-dark w-100">What is Visualization?</button></a>
+        <a href="https://docs.google.com/presentation/d/1raZewf2W0wm8rTSwwpbG6abSTecbkcyG1H6FkcLd6jw/edit?ts=607af4c3#slide=id.p1"> <button type="button" class="btn btn-lg btn-dark w-100">What is Visualization?</button></a>
        </div>
 
      </div>
