js related qs add

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </a>
             </li>
             <li class="nav item">
-                <a class="nav-link" href="quiz_app/home.html">Quiz</a>
+                <a class="nav-link" href="quiz_app/index.html">Quiz</a>
             </li>
             <li class="nav item">
               <div class="dropdown">
@@ -75,7 +75,7 @@
          <p>Cognitive learning based</p>
          <p>Positive outlook</p>
 
-        <a href="quiz_app/home.html"><button type="button" class="btn btn-lg btn-dark w-100">Quiz</button></a>
+        <a href="quiz_app/index.html"><button type="button" class="btn btn-lg btn-dark w-100">Quiz</button></a>
        </div>
 
      </div>
