--- a/quiz_app/end.html
+++ b/quiz_app/end.html
@@ -29,7 +29,7 @@
           </button>
         </form>
         <a class="btn" href="game.html">Play Again</a>
-        <a class="btn" href="home.html">Go Home</a>
+        <a class="btn" href="index.html">Go Home</a>
       </div>
     </div>
     <script src="end.js"></script>
